# sp-blockchain

./: .gitignore  Cargo.toml  bce_records_settlement_mark.txt  dahsboard_implementation.txt  dashboard.sp.keys  dashboard_explanation_for_bc_records.txt  dashboard_security.txt  implementation_phases.txt  smart_contract_primmitives.txt  smart_contracts.txt  status.txt  todo.txt  todo_zkp.txt
dashboard/: README.md  architecture-dataflow.html  index.html
docker/: Dockerfile  Dockerfile.builder  Dockerfile.test  README.md  dashboard-nginx.conf  docker-compose-dashboard.yml  docker-compose.yml  entrypoint.sh  nginx.conf  test_bce_records.sh
docker/scripts/: run_consortium_tests.sh  run_tests.sh  test_large_settlements.sh  test_multi_validator.sh  test_realistic_scenario.sh  test_small_settlements.sh
docker/zkp_keys/: cdr_privacy.pk  cdr_privacy.vk  ceremony_transcript.json  settlement_calculation.pk  settlement_calculation.vk
scripts/: clean_database_files.sh  demo_contract_deployment.sh  demo_curl_commands.md  generate_bce_record.sh  interactive_telefonica_demo.sh  interactive_telefonica_demo_clean.sh  read_blockchain_data.sh  read_blockchain_data_docker.sh  telefonica.txt  telefonica_comprehensive_demo.sh
src/: api_server.rs  blockchain.rs  config.rs  hash.rs  lib.rs  main.rs  simple_blockchain.rs  simple_main.rs
src/api/: mod.rs
src/crypto/: mod.rs
src/network/: consensus.rs  mod.rs  p2p.rs
src/security/: auth.rs  credentials.rs  middleware.rs  mod.rs  rate_limiting.rs
src/smart_contracts/: contract_api.rs  mod.rs  vm.rs  (+1 more)
utils/: generate_bce_records.sh
(+105 files in other folders)
